--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "license": "ISC",
     "devDependencies": {
         "@grapecity/wijmo.purejs.all": "5.20231.904-rc",
+        "@types/ua-parser-js": "^0.7.37",
         "bootstrap": "^3.4.1",
         "browser-sync": "^2.27.7",
         "fs-jetpack": "2.1.1",
